Started version 2.01 of SLang interpreter with pass by reference

--- a/AV/PL/interpreters/README
+++ b/AV/PL/interpreters/README
@@ -27,3 +27,4 @@ V 2.0
 
      2.00 references in the environment, set expression, print expression, 
           let exp with block expression
+     2.01 version 2.00 + solution to assignment 6
