--- a/AV/PL/interpreters/README
+++ b/AV/PL/interpreters/README
@@ -28,3 +28,8 @@ V 2.0
      2.00 references in the environment, set expression, print expression, 
           let exp with block expression
      2.01 version 2.00 + solution to assignment 6
+
+V 3.0
+===== 
+
++ SLang 2.00 plus objects
